[package]
name = "graph-scaling"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

[dependencies]
time = "*"
rand="*"
timely="0.0.*"
timely_sort="0.1.*"
nix="*"
getopts="*"

[dependencies.graph_map]
git="http://github.com/frankmcsherry/graph-map"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
